@@ -31,8 +31,6 @@ import java.util.Map;
 
 import javax.ws.rs.BadRequestException;
 
-import com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider;
-
 import org.apache.cxf.Bus;
 import org.apache.cxf.bus.spring.SpringBusFactory;
 import org.apache.cxf.jaxrs.client.JAXRSClientFactoryBean;
@@ -98,7 +96,7 @@ public class JAXRSJwsJsonTest extends AbstractBusClientServerTestBase {
         String address = "https://localhost:" + PORT + "/jwsjsonhmac";
         BookStore bs = createBookStore(address,
                                        "org/apache/cxf/systest/jaxrs/security/secret.jwk.properties",
-                                       Collections.singletonList(new JacksonJsonProvider()));
+                                       List.of());
         Book book = bs.echoBook(new Book("book", 123L));
         assertEquals("book", book.getName());
         assertEquals(123L, book.getId());
@@ -109,8 +107,7 @@ public class JAXRSJwsJsonTest extends AbstractBusClientServerTestBase {
             return;
         }
         String address = "https://localhost:" + PORT + "/jwejwsjsonhmac";
-        List<?> extraProviders = Arrays.asList(new JacksonJsonProvider(),
-                                               new JweWriterInterceptor(),
+        List<?> extraProviders = Arrays.asList(new JweWriterInterceptor(),
                                                new JweClientResponseFilter());
         String jwkStoreProperty = "org/apache/cxf/systest/jaxrs/security/secret.jwk.properties";
         Map<String, Object> props = new HashMap<>();
